[tool.poetry]
name = "automata"
version = "0.1.0"
description = ""
authors = ["jcha-ultra <15233508+jcha-ultra@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.147"
PyYAML = "^6.0"
marvin = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
