[tool.poetry]
name = "automata"
version = "0.1.0"
description = ""
authors = ["jcha-ultra <15233508+jcha-ultra@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.142"
PyYAML = "^6.0"
openai = "^0.27.4"
llama-index = "^0.5.25"
setuptools = "^67.7.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
